--- a/.github/workflows/auto_black.yml
+++ b/.github/workflows/auto_black.yml
@@ -8,6 +8,12 @@ on:
     branches:
       - master
 
+
+permissions:
+  pull-requests: write
+  contents: write
+  
+
 jobs:
   run-linters:
     name: Run linters
